video: toggle button play and controls * Controls will hidden when video stopped. * Controls will visible when video playing

--- a/src/less/plyr.less
+++ b/src/less/plyr.less
@@ -416,6 +416,9 @@
     opacity: 0;
     visibility: hidden;
 }
+.plyr--stopped .plyr__controls {
+    display: none;
+}
 
 // States
 .plyr__controls [data-plyr='pause'],
